--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
         <h2>BIENVENUE DANS ANSAR</h2>
         
         <div class="buttons">
-            <button class="btn" data-url="https://ansaralmouyassar.github.io/web/">APPLICATION VERSION WEB</button>
-            <button class="btn" data-url="https://ansaralmouyassar.github.io/siteofficielle/">SITE OFFICIEL</button>
+            <button class="btn" data-url="https://play.google.com/store/apps/details?id=com.ansar.almouyyassar.app&pcampaignid=web_share">TELECHARGER L'APPLICATION </button>
+            <button class="btn" data-url="https://ansaralmouyassar.github.io/siteofficielle/">VISITEZ LE SITE OFFICIEL</button>
         </div>
     </div>
 
